--- a/frontend/src/components/Login/styles.modules.css
+++ b/frontend/src/components/Login/styles.modules.css
@@ -40,7 +40,7 @@
     width: 370px;
     padding: 15px;
     border-radius: 10px;
-    background-color: I#edf5f3;
+    background-color: #edf5f3;
     margin: 5px 0;
     font-size: 14px;
   }
